# LEDSync

./: .gitignore  README.md  sdkconfig  sdkconfig.old
client/: CMakeLists.txt  LICENSE  partitions.csv  sdkconfig.old
client/main/: CMakeLists.txt  main.cpp
client/main/examples/: manage_leds.cpp
client/main/modules/gatt_client/: gatt_client.cpp
client/main/modules/lcd/: font.h
client/main/modules/led_strip/: led_strip.c  (+1 more)
main/: CMakeLists.txt  main.cpp  main_input_examples.cpp  main_registering_device.cpp
main/management/lcd_management/: lcd_management.cpp  lcd_management.h
main/management/registering_device_management/: registering_device_management.cpp  registering_device_management.h
main/modules/device_registerer/: device_registerer.h
main/modules/gatt_client/: gatt_client.cpp  gatt_client.h
main/modules/gatt_server/: gatt_server.h
main/modules/http_server/: http_server.cpp  http_server.h
main/modules/input/: button.cpp  button.hpp  encoder.cpp  encoder.hpp  input.cpp  input.hpp  ir.cpp  ir.hpp  potentiometer.cpp  potentiometer.hpp
main/modules/input_handler/: input_handler.cpp  input_handler.hpp
main/modules/lcd/: lcd.cpp  lcd.h
main/modules/led_strip/: led_strip.c
main/modules/menu/: menu.h
main/modules/mqtt/: mqtt_manager.cpp  mqtt_manager.h
main/modules/persistent_storage/: persistent_storage.cpp
main/modules/types/: ble_types.h
main/modules/utils/: utils.cpp  utils.h
main/modules/wifi/: wifi_manager.cpp  wifi_manager.h
server/: partitions.csv  sdkconfig  sdkconfig.old
server/main/: CMakeLists.txt  IR_codes.txt  main.cpp  main_registering_device.cpp
server/main/examples/: change_device_mode.cpp  device_register_example.cpp  mqtt_send_telemetry.cpp
(+30 files in other folders)
